# Calculator

./: CMakeLists.txt  README.md
sources/: Error_Debugging_Func.cpp  Polish_Entry_Func.cpp  Result_Func.cpp  header.hpp  main.cpp
